Scrumdo-86,83,82,84,87,81,80 course subscription pages

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
@@ -14,7 +14,7 @@
     font-size: inherit!important;
 }
 
-.field, .field--name-field-heading h3 {
+.field--name-field-heading h3 {
     
     margin-bottom: 40px;
 }
@@ -290,9 +290,9 @@ $font-family-primary: 'Lato', sans-serif;
     display: flex !important;
 }
 
-input[type="radio"]:checked {
-    display: none !important;
-}
+//input[type="radio"]:checked {
+//    display: none !important;
+//}
 
 .tab-heading {
     background: #fff !important;
