--- a/docroot/themes/custom/site/src/scss/custom/components/_button.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_button.scss
@@ -30,7 +30,7 @@ $button-secondary-icon-background: darken($btn-secondary-bg, 14%);
             font-family: 'Open Sans', sans-serif;
 }
 
-.btn {
+.btn-arrow {
   @extend .btn;
   @extend .btn-lg;
   position: relative;
