--- a/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
@@ -19,6 +19,12 @@
     margin-bottom: 40px;
 }
 
+#accordians {
+    width: 100%;
+}
+#tabs {
+    width: 100%;
+}
 // Font colors
 
 $font-light: #aaaaaa;
