--- a/docroot/themes/custom/site/templates/page/page--node--25.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--node--25.html.twig
@@ -123,8 +123,9 @@
                                       
                     
                                      <br>
-                         
+                             {{ drupal_view('lange_ophold', 'page_1') }}
                                 </div>
+                               
 
                     </div>
                 {% endblock %}
