--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -166,8 +166,132 @@ h1, h2, h3, h4, h5, h6 {
 #js-view-dom-id-82069330c64efa0f51464bf2cd93f29f3260f65b3d616fc2e014ecdb526401d8 {
   padding-top: 40px;
 }
+.table tr {
+    border: 1px solid #ddd;
+    background: none;
+}
+.table-responsive .views-field-field-course-image {
+    width: 330px;
+    border: none;
+    padding: 0;
+}
+.table-responsive .views-field-title {
+    padding: 23px;
+}
+.table-responsive .img-responsive {
+    min-width: 100%;
+    max-width: inherit;
+}
+#view-field-vih-course-periods-table-column {
+    border-bottom: none;
+    padding: 10px;
+}
+#view-title-table-column {
+    border-bottom: none;
+    padding: 10px;
+}
+.course-title {
+    margin-bottom: 10px;
+}
+.course-title a {
+    font-weight: bold;
+    font-size: 18px;
+}
+.course-body {
+    margin-bottom: 10px;
+}
+.course-supervisor {color: #888;}
+.course-supervisor a {
+    color: #212121;
+    font-size: 14px;
+    
+}
 
-.paragraph--type--class-packages .angled-background-inner {
+article .field--name-field-vih-course-periods {
+    margin-bottom: 40px;
+}
+
+article .field--name-body {
+    margin-bottom: 40px;
+}
+
+article .field--name-body p {
+    margin-bottom: 20px;
+    margin-top: 20px; }
+article .field--name-field-vih-course-periods .field--label {
+    margin-bottom: 30px;
+}
+tr {
+    background: transparent!important;
+}
+
+.table-responsive {
+    min-height: 100%!important;
+}
+
+
+.page-node-type-vih-long-cource article .field--name-field-vih-course-periods a {
+    color: #888;
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 1px solid #eee;
+    text-decoration: none;
+}
+
+article .field--name-field-course-image {display: none;}
+
+.page-node-type-vih-long-cource article a {
+    color: #ff6400;
+    text-decoration: underline;
+}
+
+article p {
+    line-height: 26px;
+}
+.course-supervisor span:first-letter {
+    text-transform: uppercase!important;
+}
+.table-responsive .views-field-field-vih-course-periods {
+    width: 150px;
+    padding: 25px;
+    padding-left: 10px;
+}
+
+.long-cource-wrapper .col-md-6 {
+    padding: 0!important;
+}
+
+.path-node .angled-background-inner .container {
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.path-frontpage .field--name-field-link field--type-link .btn-arrow {
+    font-weight: bold!important;
+}
+
+.path-node .angled-background-inner .container p {
+    margin-bottom: 25px;
+    font-size: 26px;
+    text-transform: uppercase;
+    font-weight: bold!important;
+    color: #fff!important;
+    font-family: "Open Sans", Sens-serif !important;
+}
+.field--name-field-heading {
+    width: 100%;
+}
+
+.path-node .paragraph--type--_-column-action-centered .field--name-field-heading {
+    margin-bottom: 35px!important;
+}
+.path-node .paragraph--type--class-packages .angled-background-inner {
   margin-bottom: 100px;
 }
 
@@ -325,7 +449,7 @@ flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("https://vih.dk/sites/vih.local/files/styles/panopoly_image_original/public/wysiwyg/20130420-2k2a8125-428-90.jpg?itok=yyKJitCo");
+    background: lightblue;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 0px -250px;
@@ -426,6 +550,19 @@ flex-direction: column;
     border: none;
     border-radius: 0px;
 }
+.btn-simple {
+    padding-left: 40px!important;
+    padding-right: 40px!important;
+}
+
+.path-frontpage .btn-arrow {
+    max-width: 210px!important;
+}
+
+.path-frontpage .field--name-field-link {
+    display: flex;
+    justify-content: center;
+}
 
 @media screen and (max-width: 990px) {
     
@@ -433,6 +570,10 @@ flex-direction: column;
         
         padding-top: 15px!important;
         padding-bottom: 15px!important;
+    }
+    
+    .modal-dialog {
+        width: inherit!important;
     }
     
     .fpnews-title {
