--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -25,6 +25,28 @@ $md-page-layout-content-inner-padding-bottom: 60px;
 // Styling
 // --------------------------------------------------
 
+html {
+    min-height: 100vh;
+    height: inherit;
+}
+
+.field--name-field-news-tags .field__items {
+    padding: 15px;
+    border: 1px solid #eee;
+}
+
+.field--name-field-news-tags .field--label {
+    margin-bottom: 10px;
+}
+
+.fagpakker-hovering {
+    position: absolute;
+    left: 0;
+}
+.fagpakker-container {
+    position: relative;
+}
+
 // Page layout
 .layout__content {
   padding-top: 0;
@@ -229,6 +251,114 @@ tr {
     min-height: 100%!important;
 }
 
+#edit-preview {
+    text-transform: inherit!important;
+    
+}
+
+.select-wrapper:after {
+    color: #aaa;
+    padding-right: 1.2em;
+    margin-top: -.4em;
+}
+
+.form-icon {
+    color: #999;
+    padding: 7px;
+    margin-right: 5px;
+    font-size: 18px;
+    border: 1px solid #ddd;
+}
+.modal-backdrop {
+    display: none!important;
+}
+
+table .field--type-text-long p {
+    font-size: 0.9em;
+}
+
+.panel-body tr td:nth-child(2) {
+    width: 30%;
+}
+
+table .btn-radio-select {
+    background: none!important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: left;
+    top: 0!important;
+    margin-right: 10px;
+}
+
+table .btn-radio-select.active {
+    background: #00bcff!important;
+    box-shadow: none;
+    
+}
+
+.path-langeophold .field--name-field-vih-class-image {
+    height: 150px;
+    overflow: hidden;
+}
+
+.form-select {
+    background: #f5f5f5;
+    border: 1px solid #e1e1e1;
+    box-shadow: none;
+    text-transform: uppercase;
+    letter-spacing: 0.050em;
+    color: #999;
+    font-size: 14px;
+}
+
+.form-text {
+     text-transform: uppercase;
+    letter-spacing: 0.050em;
+    color: #999;
+    font-size: 14px;
+}
+
+button {
+    font-weight: 700!important;
+}
+
+.breaker {
+    width: 100%;
+    height: 30px;
+}
+
+.select-wrapper select {
+    line-height: 22px!important;
+}
+
+/* 404 */
+
+
+#main{
+    display: table;
+    width: 100%;
+    height: 50vh;
+    text-align: center;
+}
+
+.fof{
+	  display: table-cell;
+	  vertical-align: middle;
+}
+
+.fof h1{
+	  font-size: 50px;
+	  display: inline-block;
+	  padding-right: 12px;
+	  animation: type .5s alternate infinite;
+    line-height: inherit!important;
+}
+
+@keyframes type{
+	  from{box-shadow: inset -3px 0px 0px #888;}
+	  to{box-shadow: inset -3px 0px 0px transparent;}
+}
 
 .page-node-type-vih-long-cource article .field--name-field-vih-course-periods a {
     color: #888;
