--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/radio-selection/_vih_class.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/radio-selection/_vih_class.scss
@@ -13,7 +13,6 @@
         border-radius: 0;
         justify-content: center;
         align-items: center;
-        text-transform: uppercase;
         font-weight: 700;
         font-family: $font-family-primary;
         max-height: 40px;
@@ -76,11 +75,14 @@
   }
 }
 
+#edit-submit {
+    font-weight: 700;
+}
+
 .btn.btn-default {
   border-radius: 0;
   justify-content: center;
   align-items: center;
-  text-transform: uppercase;
   font-weight: 700;
   font-family: $font-family-primary;
   color: #bbb;
