updating front page news, exporting config from database

--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -37,19 +37,19 @@
 
             <!-- Begin - contact information -->
             <aside class="layout-header-contact-information">
-                <a href="tel:004575820811"><i class="material-icons">phone</i> +45 7582 0811</a> <span>Mandag - fredag <strong>08:00 - 15:00</strong></span>
+                <a href="tel:004575820811"><i class="material-icons">phone</i> +45 7582 0811</a> <span>{{ 'Mandag - fredag'|trans }} <strong>08:00 - 15:00</strong></span>
             </aside>
             <!-- End - contact information -->
 
             <!-- Begin - tour -->
             <aside class="layout-header-tour">
-                <a href="#"><i class="material-icons">bookmark_border</i> Rundvisning</a> <span><strong>Det er gratis</strong></span>
+                <a href="#"><i class="material-icons">bookmark_border</i> {{ 'Rundvisning'|trans }}</a> <span><strong>{{ 'Det er gratis'|trans }}</strong></span>
             </aside>
             <!-- End - tour -->
 
             <!-- Begin - contact -->
             <aside class="layout-header-contact">
-                <a href="#"><i class="material-icons">portrait</i> Kontakt</a>
+                <a href="#"><i class="material-icons">portrait</i> {{ 'Kontakt'|trans }}</a>
             </aside>
             <!-- End - contact -->
 
