added fields for vih_class_package, fixed style and added dynamic image for teaser

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
@@ -11,7 +11,7 @@
 
 .field, .field--name-field-heading {
     
-    font-size: inherit!important;
+  //  font-size: inherit !important;
 }
 
 .field--name-field-heading h3 {
