--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -825,23 +825,23 @@ flex-direction: column;
   background-image: url("http://test.vih.bellcom.dk/sites/default/files/styles/class_packages_frontpage/public/vih-rejser_0.jpg");
 }
 
-.Boldspil-color{
+.color-cyan {
   background-color:#00a5e2;
 }
 
-.Fitness-color{
+.color-red {
   background-color:#FF5300;
 }
 
-.Outdoor-color{
+.color-blue {
   background-color:#9ED200;
 }
 
-.Politi-color{
+.color-purple {
   background-color:#45535D;
 }
 
-.Endurance-color{
+.color-green {
   background-color:#00C885;
 }
 
@@ -876,13 +876,14 @@ flex-direction: column;
 
 .fagpakker-container {
   overflow: hidden;
+  position: relative;
 }
 
 .fagpakker-container .fagpakker-overlay {
   width: 100%;
   height: 12vh;
-  position: relative;
   bottom: 0;
+/*  position: relative;*/
   -webkit-clip-path: polygon(0 50%, 100% 0, 100% 100%, 0% 100%);
   clip-path: polygon(0 50%, 100% 0, 100% 100%, 0% 100%);
   display: flex;
@@ -893,6 +894,28 @@ flex-direction: column;
   opacity: 0.9;
   margin-bottom:-1px;
 }
+
+.fagpakker-overlay {
+  position: absolute;
+}
+
+/*.img-responsive {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}*/
+
+/*.fagpakker-container > div > img {
+   z-index: 0;
+}
+
+.fagpakker-container {
+  z-index: 1;
+}
+
+.fagpakker-overlay {
+  z-index: 3;
+}*/
 
 .fagpakker-container:hover .fagpakker-overlay:hover {
   background: rgba(30,125,150,0.898);
