VIH Long course node view

--- a/docroot/themes/custom/site/src/scss/custom/components/_button.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_button.scss
@@ -126,7 +126,10 @@ $button-secondary-icon-background: darken($btn-secondary-bg, 14%);
 }
 
 
-
+.btn-center {
+  margin: auto;
+  max-width: 210px !important;
+}
 
 // Secondary
 .btn-secondary {
