VIH Long course popup

--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class.scss
@@ -1,4 +1,5 @@
-.vih_class.teaser {
+.vih_class.teaser,
+.vih_class.vih_class_table_teaser {
   .field--name-field-vih-class-image {
     position: relative;
     .triangle {
