--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/radio-selection/_vih_class.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/radio-selection/_vih_class.scss
@@ -37,6 +37,7 @@
       }
       .field--name-field-vih-class-image {
         position: relative;
+        height: 124px;
         .triangle {
           position: absolute;
           width: 100%;
