--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-class-selection-radios.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-class-selection-radios.html.twig
@@ -12,7 +12,7 @@
                     <div class="modal fade" id="class-modal-{{ radios[delta]['#id'] }}" role="dialog">
                         <div class="modal-dialog">
                             <div class="modal-content">
-                                <div class="modal-header">
+                                <div class="modal-header" style="background-image: url('{{ file_url(radios['#classes']['radio_selection'][delta]['#taxonomy_term'].field_vih_class_image.entity.fileuri) }}');">
                                     <div class="modal-header-close">
                                         <button type="button" class="close" data-dismiss="modal">×</button>
                                     </div>
@@ -22,7 +22,7 @@
                                 </div>
 
                                 {#TODO: fix with the correct class info#}
-                                <div class="modal-body">{{ radios['#classes']['radio_selection'][delta]['#taxonomy_term'].getDescription }}</div>
+                                <div class="modal-body">{{ radios['#classes']['radio_selection'][delta]['#taxonomy_term'].getDescription|raw }}</div>
                             </div>
                         </div>
                     </div>
