--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -100,7 +100,7 @@ view_mode ? view_mode|clean_class,
             </div>
             <div class="col-sm-6">
                 <h4>{{ 'Kom ud at rejse'|trans }}:</h4>
-                <h5>{{ 'Skæddersy dit ophold paå tværs af fagpakker'|trans }}</h5>
+                <h6 class="color-gray">{{ 'Skæddersy dit ophold paå tværs af fagpakker'|trans }}</h5>
 
                 <div class="row">
                     {% for travel_class in content.travel_classes %}
@@ -110,14 +110,14 @@ view_mode ? view_mode|clean_class,
                     {% endfor %}
                 </div>
                 <h4>{{ 'Fagpakker'|trans }}:</h4>
-                <h5>{{ 'Skæddersy dit ophold på tværs af fagpakker'|trans }}</h5>
+                <h6 class="color-gray">{{ 'Skæddersy dit ophold på tværs af fagpakker'|trans }}</h6>
 
                 <div class="panel-group" id="accordionClassPackages">
                     <div class="panel-heading blue"><h4 class="panel-title"><a>{{ 'Fagpakker'|trans }}</a></h4></div>
 
                     {% for class_package_id,class_package in content.classes_packages %}
                         <div class="panel panel-default white-border-bottom">
-                            <div class="panel-heading">
+                            <div class="panel-heading accordion-{{ class_package.term['#taxonomy_term'].field_vih_class_package_color.value }}">
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle collapsed"
                                        data-toggle="collapse"
@@ -125,8 +125,12 @@ view_mode ? view_mode|clean_class,
                                        href="#collapseClassPackage-{{ class_package_id }}">{{ class_package.name }}</a></h4>
                             </div>
                             <div id="collapseClassPackage-{{ class_package_id }}" class="panel-collapse collapse">
+                                <div class="panel-banner" style="background-image: url('{{ file_url(class_package.term['#taxonomy_term'].field_vih_cp_image.entity.fileuri) }}');">
+                                  <div class="banner-spacer"></div>
+                                  <div class="diagonal-end"></div>
+                                </div>
                                 <div class="panel-body">
-                                    {{ class_package.term }}
+                                  {{ class_package.term }}
                                 </div>
                             </div>
                         </div>
@@ -136,20 +140,21 @@ view_mode ? view_mode|clean_class,
 
 
         </div>
-        <div col="row">
+                
+        <div class="row m40">
             <div class="col-xs-12">
                 <a href="{{ url('vih_subscription.long_course_order_create', {'course': node.id}) }} " class="btn btn-arrow btn-center">{{ "Begynd nu"|trans }}</a>
             </div>
         </div>
 
-        <div col="row">
+        <div class="row m40">
             <div class="col-xs-12">
                 <h4>{{ 'Har du spørgsmal til kurset?'|trans }}</h4>
                 {{ content.field_vih_cource_contact_person }}
             </div>
         </div>
 
-        <div col="row">
+        <div class="row">
             <div class="col-xs-12">
                 <h4>{{ "Prisoversigt"|trans }}:</h4>
 
