--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
@@ -111,7 +111,7 @@
               </div>
           </div>
       </div>
-      {#popup END#}
-    </div> {#end modal dialog#}
+    </div> 
+    {#end modal dialog#}
   </div>
 </div>
