fixed style for reusable component

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-elements.scss
@@ -505,8 +505,8 @@ $font-family-primary: 'Lato', sans-serif;
   }
 }
 
-.panel-body {
-  padding: 0 50px 40px 50px !important;
+.term-body {
+  padding: 0 50px 40px 50px;
 }
 
 .panel-body p {
