--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -129,7 +129,7 @@ view_mode ? view_mode|clean_class,
                                   <div class="banner-spacer"></div>
                                   <div class="diagonal-end"></div>
                                 </div>
-                                <div class="panel-body">
+                                <div class="panel-body term-body">
                                   {{ class_package.term }}
                                 </div>
                             </div>
