vih_long_cource and vih_short_cource nodes have field_paragraphs

--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -187,9 +187,9 @@ view_mode ? view_mode|clean_class,
                 </table>
             </div>
         </div>
-
-
-
+        <div class="row paragraphs">
+            {{ content.field_paragraphs }}  
+        </div>
     </div>
 
 </article>
