--- a/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
@@ -45,7 +45,9 @@
         {{ content.field_vih_cs_contact_person }}
       </div> 
     </div>
-      
+    <div class="row paragraphs">
+      {{ content.field_paragraphs }}
+    </div>
   </div>
 
 </article>
