--- a/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
@@ -8,8 +8,9 @@
     'clearfix',
   ]
 %}
-<article{{ attributes.addClass(classes) }}>
 
+<article{{ attributes.addClass(classes) }}>
+<div class="container">
   {{ title_prefix }}
   {% if not page %}
     <h2{{ title_attributes }}>
@@ -27,9 +28,10 @@
       </div>
     </footer>
   {% endif %}#}
-
+</div>
   <div{{ content_attributes.addClass('content') }}>
     {#{{ content }}#}
+    <div class="container">
     <div class="row">
       <div class="col-sm-12">
         {{ content.body }}
@@ -45,6 +47,7 @@
         {{ content.field_vih_cs_contact_person }}
       </div> 
     </div>
+      </div>
     <div class="row paragraphs">
       {{ content.field_paragraphs }}
     </div>
