--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -141,20 +141,20 @@ view_mode ? view_mode|clean_class,
 
         </div>
                 
-        <div class="row m40">
+        <div class="row lc-btn-box">
             <div class="col-xs-12">
                 <a href="{{ url('vih_subscription.long_course_order_create', {'course': node.id}) }} " class="btn btn-arrow btn-center">{{ "Begynd nu"|trans }}</a>
             </div>
         </div>
 
-        <div class="row m40">
+        <div class="row lc-contact-box">
             <div class="col-xs-12">
                 <h4>{{ 'Har du spørgsmal til kurset?'|trans }}</h4>
                 {{ content.field_vih_cource_contact_person }}
             </div>
         </div>
 
-        <div class="row">
+        <div class="row lc-price-box">
             <div class="col-xs-12">
                 <h4>{{ "Prisoversigt"|trans }}:</h4>
 
