--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--vih-class-table-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--vih-class-table-teaser.html.twig
@@ -36,7 +36,7 @@
         <div class="col-xs-6">
             {{ content.field_vih_class_image }}
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-6 vih-col-center">
             {{ content.description }}
         </div>
     </div>
