--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1115,13 +1115,16 @@ flex-direction: column;
   margin-top: 32px;
 }
 
-.modal-class {
-  border:1px solid red;
-  padding:50px !important;
-  
+.modal-class div.field--name-description {
+  padding: 10px 40px 10px 0;
 }
-.modal-class > h3 {
-  font-size:12px;
+
+.modal-class div.field--name-description p {
+  text-transform: uppercase;
+  line-height: 15px !important;
+  font-size: 11px !important;
+  text-align: left;
+  
 }
 
 //  ***********************************
