fixed title position in course teaser block

--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class.scss
@@ -35,6 +35,11 @@
         position: absolute;
       }
     }
+    h5 {
+      position:absolute; 
+      bottom: -1px;
+      right: 20px;
+    }
   }
   .vih-col-center {
     display: flex; 
